--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,8 +15,8 @@ build:
     - docker build -t "$CI_PROJECT_PATH:$CI_COMMIT_REF_SLUG" .
     - docker push "$CI_PROJECT_PATH:$CI_COMMIT_REF_SLUG"
     - export
-    - git branch #git symbolic-ref --short HEAD
-    - ls -la
+    - git rev-parse --abbrev-ref HEAD
+
 
 test:
   stage: unittest
